# VirtualGuessr

./: .gitignore  README.md  build.sh  deploy.sh  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
nginx/: Dockerfile  Dockerfile-dev  default.conf
pubguessr_front/: package-lock.json
pubguessr_front/src/: App.js
pubguessr_front/src/components/: CustomMap.js  GameScreen.js
scripts/: .pdm-python  capture.py  capture_cubemap.py  image_analysis.py  pyproject.toml  resize_window.ps1  select_location.py  to_equirectangular.py
virtualguessr_back/: Dockerfile  README.md  pyproject.toml  requirements.txt
virtualguessr_back/data/: virtualguessr.db
virtualguessr_back/db/: images.db
virtualguessr_back/src/: database.py  main.py
virtualguessr_front/: Dockerfile  package-lock.json  package.json
virtualguessr_front/public/: index.html
virtualguessr_front/public/images/cubemap/: positions.csv
virtualguessr_front/src/: App.js  config.js
virtualguessr_front/src/components/: CustomImageMap.js  CustomMap.js  CustomShovelIcon.module.css  GameScreen.js  LandscapeMinimap.js  NewsletterIcon.js  NewsletterSignup.js  PanoramaViewer.js  PortraitMap.js  ScoreDisplay.js
virtualguessr_front/src/components/CustomMap/: CustomImageMap.js  FullscreenMap.js  GuessButton.js  LandscapeMinimap.js  MapContainer.js  PortraitMap.js  ScoreDisplay.js  useMapLogic.js  (+2 more)
virtualguessr_front/src/contexts/: GameContext.js
virtualguessr_front/src/hooks/: CustomPointer.module.css  useGameLogic.js  useMapLogic.js  useNewsletterForm.js  useScoreCalculation.js
