[project]
name = "scripts"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "romathonat", email = "romain.mathonat@gmail.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "numpy>=2.1.2",
    "tesseract>=0.1.3",
    "pytesseract>=0.3.13",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
