[project]
name = "virtualguessr_back"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "romathonat", email = "romain.mathonat@gmail.com"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
